[package]
name = "kine-core"
version = "0.1.0"
edition = "2021"
description = "Correct and human-readable time handling for Rust"
repository = "https://github.com/Ekleog/kine"
license = "MIT OR Apache-2.0"
keywords = ["calendar", "date", "no-std", "time"]
categories = ["aerospace", "date-and-time", "no-std::no-alloc"]

[features]
default = ["std"]
std = []
tz-system-provider-builtin-iers = []
tz-utc-provider-builtin-iers = []

[dependencies]
cfg-if.workspace = true

[dev-dependencies]
bolero.workspace = true
