[package]
name = "kine"
version = "0.1.0"
edition = "2021"
description = "Correct and human-readable time handling for Rust"
repository = "https://github.com/Ekleog/kine"
license = "MIT OR Apache-2.0"
keywords = ["calendar", "date", "no-std", "time", "unicode"]
categories = ["aerospace", "date-and-time", "internationalization", "localization", "no-std::no-alloc"]

[features]
icu = [ "dep:kine-icu" ]

[dependencies]
kine-core.workspace = true
kine-icu = { workspace = true, optional = true }
