[package]
name = "kine"
version = "0.1.3"
edition = "2021"
description = "Correct and human-readable time handling for Rust"
repository = "https://github.com/Ekleog/kine"
documentation = "https://docs.rs/kine"
license = "MIT OR Apache-2.0"
keywords = ["calendar", "date", "no-std", "time", "unicode"]
categories = ["aerospace", "date-and-time", "internationalization", "localization", "no-std::no-alloc"]

[features]
icu = [ "dep:kine-icu" ]
tz-system-provider-builtin-iers = [ "kine-core/tz-system-provider-builtin-iers" ]
tz-utc-provider-builtin-iers = [ "kine-core/tz-utc-provider-builtin-iers" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kine-core.workspace = true
kine-icu = { workspace = true, optional = true }

[dev-dependencies]
kine-core = { workspace = true, features = [
    "tz-system-provider-builtin-iers",
    "tz-utc-provider-builtin-iers",
] }
